[gd_scene load_steps=41 format=3 uid="uid://dra3h6qmatw81"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_6ies5"]
[ext_resource type="Texture2D" uid="uid://c6aq3cvvbljrf" path="res://Assets/Idle.png" id="2_28q0e"]
[ext_resource type="Texture2D" uid="uid://cwmqockt0x12u" path="res://Assets/Attacks.png" id="2_i30js"]
[ext_resource type="Texture2D" uid="uid://cpn1dlpxxm44" path="res://Assets/Jump.png" id="3_cwcw3"]
[ext_resource type="Texture2D" uid="uid://byprbb0d4gucb" path="res://Assets/Run.png" id="3_w5gwn"]
[ext_resource type="Texture2D" uid="uid://c80xcboy47foc" path="res://Assets/Roll.png" id="5_ivgah"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_goeyl"]
size = Vector2(15.5, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7l1n"]
atlas = ExtResource("2_i30js")
region = Rect2(128, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xl4m"]
atlas = ExtResource("2_i30js")
region = Rect2(0, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2p8i"]
atlas = ExtResource("2_i30js")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu7mt"]
atlas = ExtResource("2_i30js")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_55xp5"]
atlas = ExtResource("2_28q0e")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc8w1"]
atlas = ExtResource("2_28q0e")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nq6jb"]
atlas = ExtResource("2_28q0e")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5g3sm"]
atlas = ExtResource("2_28q0e")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwgcq"]
atlas = ExtResource("2_28q0e")
region = Rect2(0, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_whsal"]
atlas = ExtResource("2_28q0e")
region = Rect2(128, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl4ja"]
atlas = ExtResource("2_28q0e")
region = Rect2(0, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gut5j"]
atlas = ExtResource("2_28q0e")
region = Rect2(128, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2x2s"]
atlas = ExtResource("3_cwcw3")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oao8t"]
atlas = ExtResource("3_cwcw3")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_psmcb"]
atlas = ExtResource("3_cwcw3")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wptjc"]
atlas = ExtResource("3_cwcw3")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6pkt"]
atlas = ExtResource("3_cwcw3")
region = Rect2(0, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_swfl6"]
atlas = ExtResource("3_cwcw3")
region = Rect2(128, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fysug"]
atlas = ExtResource("3_cwcw3")
region = Rect2(0, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cy4u"]
atlas = ExtResource("3_cwcw3")
region = Rect2(128, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkmyx"]
atlas = ExtResource("5_ivgah")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dur0p"]
atlas = ExtResource("5_ivgah")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcp4u"]
atlas = ExtResource("5_ivgah")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cj8nv"]
atlas = ExtResource("5_ivgah")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hy0ga"]
atlas = ExtResource("3_w5gwn")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlhmu"]
atlas = ExtResource("3_w5gwn")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic5op"]
atlas = ExtResource("3_w5gwn")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4xdj"]
atlas = ExtResource("3_w5gwn")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nyyq"]
atlas = ExtResource("3_w5gwn")
region = Rect2(0, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rf0gm"]
atlas = ExtResource("3_w5gwn")
region = Rect2(128, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ja66y"]
atlas = ExtResource("3_w5gwn")
region = Rect2(0, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_veo6e"]
atlas = ExtResource("3_w5gwn")
region = Rect2(128, 192, 128, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_pqt6l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7l1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xl4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2p8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu7mt")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_55xp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc8w1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nq6jb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g3sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwgcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whsal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl4ja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gut5j")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2x2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oao8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psmcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wptjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6pkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swfl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fysug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cy4u")
}],
"loop": true,
"name": &"jumping",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkmyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dur0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcp4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cj8nv")
}],
"loop": false,
"name": &"rolling",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hy0ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlhmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic5op")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4xdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nyyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rf0gm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ja66y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_veo6e")
}],
"loop": true,
"name": &"walking",
"speed": 8.0
}]

[node name="Player" type="CharacterBody2D"]
position = Vector2(118, 88)
script = ExtResource("1_6ies5")

[node name="HitArea" type="Area2D" parent="."]

[node name="HitCollision" type="CollisionShape2D" parent="HitArea"]
position = Vector2(-0.25, 20)
shape = SubResource("RectangleShape2D_goeyl")

[node name="RollCollision" type="CollisionShape2D" parent="."]
position = Vector2(-0.25, 20)
shape = SubResource("RectangleShape2D_goeyl")

[node name="CharacterAnim" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, 12)
scale = Vector2(0.8125, 1)
sprite_frames = SubResource("SpriteFrames_pqt6l")
animation = &"idle"

[node name="CheckLanding" type="RayCast2D" parent="."]
position = Vector2(-6, -1)
target_position = Vector2(0, 45)

[node name="CheckLanding2" type="RayCast2D" parent="."]
position = Vector2(3, -1)
target_position = Vector2(0, 45)

[node name="LeftMarker" type="Marker2D" parent="."]
position = Vector2(-98, 1)

[node name="RightMarker" type="Marker2D" parent="."]
position = Vector2(9, 1)

[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
